<resources>
    <string name="app_name">THELIEUS</string>
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="symb_hash">#</string>
    <string name="symb_star">*</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="e1">E 1</string>
    <string name="e2">E 2</string>
    <string name="file">File</string>
    <string name="select">select</string>
    <string name="isselect"> is selected</string>
    <string name="star">Star</string>
    <string name="hash">Hash</string>
    <string name="enter">Enter</string>
    <string name="enter_is">entered is</string>
    <string name="please">Please select</string>
    <string name="MOD">MOD:</string>
    <string name="active_mode">Active Mode</string>
    <string name="Accessories">Accessories</string>
    <string name="Battery_Information">Battery Information</string>
    <string name="Braille_Alphabetical_Mode">Braille Alphabetical Mode</string>
    <string name="Calculator">Calculator</string>
    <string name="Calender">Calender</string>
    <string name="Dialed_Calls">Dialed Calls</string>
    <string name="Ebook">EBook</string>
    <string name="EBook_List">EBook List</string>
    <string name="Ebook_Read">EBook_Read</string>
    <string name="GPS">GPS</string>
    <string name="Missed_Calls">Missed_Calls</string>
    <string name="Voice_Recorder">Voice Recorder</string>
    <string name="Note_Pad">Note Pad</string>
    <string name="Optical_Reader">Optical Reader</string>
    <string name="Quick_Dial">Quick Dial</string>
    <string name="Received_Calls">Received Calls</string>
    <string name="Settings">Settings</string>
    <string name="Signal_Strength">Signal Strength</string>
    <string name="SMS">S M S </string>
    <string name="Standbymode">Stand By Mode</string>
    <string name="GOOGLE_MAPS_API_KEY">0VV4vaNBXBx4Vu19jim2eoGAn5BnbatPvHRer5Q</string>
    <string name="AppTag">AppTag</string>
    <string name="Tag">FindMyFriend</string>
    <string name="pathfinder">PathFinder</string>
    <string name="Today_Information">Today\'s Information</string>
    <string name="space"></string>
    <string name="alert_dialog_settings">Settings</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="direction_warning">Walking directions are in beta.    Use caution – This route may be missing sidewalks or pedestrian paths.</string>
    <string name="stop_navigation">Stop navigation</string>
    <string name="findmyfriend_server_error_message">Unable to connect to find my friend Server, please contact your administrator</string>
    <string name="wrong_choice">wrong choice, press 0 to repeat menu</string>
    <string name="stop_reading">Stopped Reeding</string>
    <string name="scroll_up">B A for scroll up</string>
    <string name="scroll_down">B C for scroll Down</string>
    <string name="select_fg">FG for select file</string>
    <string name="exit_8">8 for exit</string>
    <string name="repeat_0">0 for repeat menu</string>
    <string name="repeat_nine"> 9 for repeat menu</string>
    <string name="numeric_mode">you are in numeric mode</string>
    <string name="press_star">press star after entering the numbers</string>
    <string name="nochar_delete">no characters present to be deleted</string>
    <string name="nofile_sdcard">No Files in S D card Please add files to S D card and try again</string>
    <string name="fgh_active"> f g h go to active mode</string>
    <string name="previous_hg">H G for to go to previous menu</string>
    <string name="delete_d">press d to delete a character entered</string>
    <string name="enter_no">Enter the number</string>
    <string name="enter_name">please enter the name</string>
    <string name="create_dir">Creating directory</string>
    <string name="page_loding">page loading</string>
    <string name="home_page">u r already in the home page</string>
    <string name="sms_send">S M S sent to</string>
    <string name="generic_failure">Generic failure</string>
    <string name="FindMyFriend_Tag">FindMyFriend</string>
    <string name="FindMyFriend_AppTag">AppTag</string>
    <string name="FindMyFriend_signup_type_same_password_in_password_fields">Type same password in password fields</string>
    <string name="OK">OK</string>
    <string name="FindMyFriend_signup_fill_all_fields">Please fill all fields</string>
    <string name="FindMyFriend_signup_failed">Sign up failed because of unknown reason</string>
    <string name="FindMyFriend_signup_email_crashed">Your email have been already used</string>
    <string name="FindMyFriend_email_and_password_length_short">Email and password length must be at least 5</string>
    <string name="FindMyFriend_email_not_valid">Email is not valid!</string>
    <string name="FindMyFriend_signup_successfull">Your data is recorded successfully, check your email to activate your account</string>
    <string name="FindMyFriend_register_fail">Registration failed</string>
    <string name="FindMyFriend_register_successfull">Registered successfully</string>
    <string name="FindMyFriend_HTTP_RESPONSE_ERROR_UNKNOWN">unknown error</string>
    <string name="FindMyFriend_HTTP_RESPONSE_ERROR_UNAUTHORIZED_ACCESS">user name or password incorrect</string>
    <string name="FindMyFriend_HTTP_RESPONSE_ERROR_NETWORK_ISSUE">network issue</string>
    <string name="FindMyFriend_server_error_message">Unable to connect to Server, please contact your administrator</string>
    <string name="FindMyFriend_user_authentication_error_message">User name and password is incorrect !</string>
    <string name="FindMyFriend_distance_message_first_part">is in</string>
    <string name="FindMyFriend_distance_message_second_part">Kilo meters away from you</string>
    <string name="FindMyFriend_message_from_cellid">AppTagC</string>
    <string name="FindMyFriend_privacy_message">Unable to process the request</string>
    <string name="FindMyFriend_privacy_tag">AppTagP</string>
    <string name="FindMyFriend_">AppTagP</string>
    <string name="nonum_delete">no numbers to be deleted</string>
    <string name="fg_save"> F G select number and add to phone book</string>
    <string name="not_assign"> Not Assign any operation </string>
    <string name="fg_call"> FC select number to make call</string>
    <string name="calc_zero">Zero</string>
    <string name="calc_one">One</string>
    <string name="calc_two">Two</string>
    <string name="calc_three">Three</string>
    <string name="calc_four">Four</string>
    <string name="calc_five">Five</string>
    <string name="calc_six">Six</string>
    <string name="calc_seven">Seven</string>
    <string name="calc_eight">Eight</string>
    <string name="calc_nine">Nine</string>
    <string name="calc_add">Addition</string>
    <string name="calc_sub">Subtract</string>
    <string name="calc_mul">Multiplied </string>
    <string name="calc_div">Division</string>
    <string name="calc_per">Percntage</string>
    <string name="calc_cancel">operation cancelled</string>
    <string name="calc_error">Error divide by zero , op2 is zero</string>
    <string name="calc_welcome">Welcome to calculator </string>
    <string name="calc_format">Please operate as per Format, Or </string>
    <string name="calc_newformate"> select hash nine for operation Instruction</string>
    <string name="calc_operand">operand 1, followed by arithmetic function , then by  operand 2 then F G</string>
    <string name="calc_new"> please, Enter the data in following formate </string>
    <string name="calc_select">Please select</string>
    <string name="calc_hash1">Hash 1 to Add</string>
    <string name="calc_hash2">Hash 2 to Subtract</string>
    <string name="calc_hash3">Hash 3 to Multiply</string>
    <string name="calc_hash4">Hash 4 to Divide</string>
    <string name="calc_hash5">Hash 5 to decimal point</string>
    <string name="calc_fg">F G for equal to </string>
    <string name="calc_hashg">Hash G for cancel</string>
    <string name="calc_starh">Star H for Delete</string>
    <string name="calc_hg">h g to go back to previous menu</string>
    <string name="calc_star">Star</string>
    <string name="calc_hash">Hash</string>
    <string name="inval_choice">Invalid choice</string>
    <string name="acce_homeAutomation">homeAutomation application not available, please install it</string>
    <string name="acce_settings">settings application not available, please install it</string>
    <string name="acce_help">help under development</string>
    <string name="acce_welcome">Welcome to accessories</string>
    <string name="acce_select">Please select</string>
    <string name="acce_1">1 for calculator</string>
    <string name="acce_2">2 for calender</string>
    <string name="acce_3">3 for measurement</string>
    <string name="acce_4">4 for home automation</string>
    <string name="acce_8">8 for tutor</string>
    <string name="acce_9">9 for Thelieus Manual </string>
    <string name="accessory_welcome">Welcome to accessories</string>
    <string name="accessory_select">Please select</string>
    <string name="accessory_1">1 for voice recorder</string>
    <string name="accessory_2">2 for MP3 Player</string>
    <string name="accessory_3">3 for alarm</string>
    <string name="accessory_4">4 for personal organizer</string>
    <string name="active_launch">Launching  Stand by Mode</string>
    <string name="active_calldeena">calling deenadayalan</string>
    <string name="active_calljaga">calling jagannath</string>
    <string name="active_deliversms">S M S delivered to</string>
    <string name="active_welcome">Welcome to Active mode </string>
    <string name="active_notassign"> Not Assign Any Number </string>
    <string name="active_1">1 for cell phone</string>
    <string name="active_2"> 2 for education</string>
    <string name="active_3"> 3 for information</string>
    <string name="active_4"> 4 for explorer</string>
    <string name="active_5">5 for social networking</string>
    <string name="active_6"> 6 for safety and security</string>
    <string name="active_7">7 for  personal assistance</string>
    <string name="active_8"> 8 for entertainment</string>
    <string name="active_9"> 9 for accessories</string>
    <string name="active_fgh"> f g h go to stand by mode</string>
    <string name="assignGroup_welcome"> Welcome to Assign Group </string>
    <string name="assignGroup_one"> select one for Speed Dialling </string>
    <string name="assignGroup_two"> two for Emergency Message </string>
    <string name="assgnGroup_three"> three for Personal profile </string>
    <string name="contact_welcome"> welcome to Add New Contact.</string>
    <string name="contact_savename">Please enter the contact name and press F G to continue. </string>
    <string name="contact_savedname">contact name entered is</string>
    <string name="contact_hg">press h g to go back to previous menu</string>
    <string name="alarmday_notenterday">u did not enter the day, please enter the day</string>
    <string name="alarmday_hourenter"> alarm hours entered is </string>
    <string name="alarmday_minutenter">alarm minutes entered is</string>
    <string name="alarmday_dayenter">day entered is</string>
    <string name="alarmday_repeatalarm">enter the first two letters of day u want to repeat the alarm and select F g to continue</string>
    <string name="alarmhr_enter">please enter the alarm hours</string>
</resources>